--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "tailwindcss": "3.3.3"
   },
   "devDependencies": {
-    "prisma": "^5.2.0"
+    "prisma": "^5.2.0",
+    "@netlify/plugin-nextjs": "^4.37.2"
   }
 }
