--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "prebuild": "node prebuild.js"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
@@ -27,7 +28,7 @@
     "tailwindcss": "3.3.3"
   },
   "devDependencies": {
-    "prisma": "^5.2.0",
-    "@netlify/plugin-nextjs": "^4.37.2"
+    "@netlify/plugin-nextjs": "^4.40.1",
+    "prisma": "^5.2.0"
   }
 }
