--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate",
-    "prebuild": "node prebuild.js"
+    "postinstall": "prisma generate" 
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
@@ -28,7 +27,6 @@
     "tailwindcss": "3.3.3"
   },
   "devDependencies": {
-    "@netlify/plugin-nextjs": "^4.40.1",
     "prisma": "^5.2.0"
   }
 }
