--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate",
-    
+    "prebuild": "node prebuild.js"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
@@ -28,6 +28,7 @@
     "tailwindcss": "3.3.3"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.40.1",
     "prisma": "^5.2.0"
   }
 }
